--- a/web/css/06_display_2.html
+++ b/web/css/06_display_2.html
@@ -14,6 +14,7 @@
       내용없이 존재할 수 없음
       (width, height 적용 x)
     -->
+  <div class="inline"></div>
   <div class= "inline">안녕하세요?</div>
   <div class= "inline">내용영역이 필요해요</div>
   <!-- inline-block
