--- a/web/css/08_float.html
+++ b/web/css/08_float.html
@@ -10,11 +10,11 @@
 <body>
   <div></div>
   <div class="float-left"></div>
-  <div class="back"></div>
+  <div class="back">back1</div>
   <div class="float-left">1</div>
   <div class="float-left">2</div>
   <div class="float-right">3</div>
   <div class="float-right">4</div>
-  <div class="back"></div>
+  <div class="back">back2</div>
 </body>
 </html>
